--- a/style.css
+++ b/style.css
@@ -67,6 +67,11 @@ section.activities{
   margin-right: 50px;
   margin-left: 50px;
 }
+@media (min-width: 768px) {
+  .cards {
+    flex-direction: row;
+    justify-content: center;
+  }
 .card{
   color:	Black;
   flex: 1;
