--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   font-family:verdana;
   border-left: 20px solid #222;
   border-right: 20px solid #222;
-  margin: 0
+  margin: 0;
 }
 .hero {
   background:linear-gradient( to bottom, #000000 0%, #ff7900 100%);
@@ -24,11 +24,10 @@ body {
   width: 99%;
   margin: 0px auto;
   border-radius: 5px;
-  box-shadow: 0px 0px 20px;
+  box-shadow: 0px 0px 20px white;
 }
 
 .about {
-  color:;
   text-align: center;
   Margin-top: 70px;
   margin-bottom: 70px;
@@ -43,7 +42,7 @@ body {
   margin: 0px auto;
   border-radius: 5px;
   margin-bottom: 50px;
-  box-shadow: 0px 0px 30px 
+  box-shadow: 0px 0px 30px white; 
 }
 section.activities{
   text-align:center;
@@ -58,7 +57,7 @@ section.activities{
   margin-top:70px;
   width:40%;
   height:5px;
-  box-shadow: 0px 0px 30px 
+  box-shadow: 0px 0px 30px white; 
 }
 .cards{
   display: flex;
@@ -87,6 +86,8 @@ section.activities{
   .cards {
     flex-direction: row;
     justify-content: center;
+    margin-right: 50px;
+    margin-left: 50px;
   }
    .card {
     width: 45%;
