--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ section.activities{
   box-shadow: 0 20px 20px white;
   color:white;
 }
-@media (min-width: 600px) {
+@media (max-width: 600px) {
   .cards {
     flex-direction: row;
     justify-content: center;
