--- a/style.css
+++ b/style.css
@@ -7,14 +7,25 @@ body {
   font-family:verdana;
   border-left: 20px solid #222;
   border-right: 20px solid #222;
-  margin: 0;
+  margin: 0
 }
+.hero a {
+  color: white;           
+  text-decoration: none;  
+  transition: opacity 0.3s ease;
+}
+
+.hero a:hover {
+  opacity: 0.7;           
+}
+
 .hero {
   background:linear-gradient( to bottom, #000000 0%, #ff7900 100%);
   color: white;
   text-align: center;
   padding: 80px 20px;
   text-shadow: 10px 10px 10px Black;
+  
 }
 .separator-hero {
   border:solid;
@@ -24,10 +35,26 @@ body {
   width: 99%;
   margin: 0px auto;
   border-radius: 5px;
-  box-shadow: 0px 0px 20px white;
+  box-shadow: 0px 0px 20px;
+}
+.nav{
+  display:flex;
+  justify-content: space-between;
+  aligne-items: center;
+}
+.nav-links{
+  list-style:none;
+  display: flex;
+  gap: 1.5rem;
+}  
+.nav-links a{
+  text-decoration:none;
+  color:white;
+  font-size: 1rem;
 }
 
 .about {
+  color:;
   text-align: center;
   Margin-top: 70px;
   margin-bottom: 70px;
@@ -42,7 +69,7 @@ body {
   margin: 0px auto;
   border-radius: 5px;
   margin-bottom: 50px;
-  box-shadow: 0px 0px 30px white; 
+  box-shadow: 0px 0px 30px 
 }
 section.activities{
   text-align:center;
@@ -57,7 +84,7 @@ section.activities{
   margin-top:70px;
   width:40%;
   height:5px;
-  box-shadow: 0px 0px 30px white; 
+  box-shadow: 0px 0px 30px 
 }
 .cards{
   display: flex;
@@ -81,18 +108,6 @@ section.activities{
   transform: translateY(-5px);
   box-shadow: 0 20px 20px white;
   color:white;
-}
-@media (max-width: 1200px) {
-  .cards {
-    flex-direction: row;
-    justify-content: center;
-    margin-right: 50px;
-    margin-left: 50px;
-  }
-   .card {
-    width: 45%;
-    max-width: none;
-   }
 }
 footer {
   background: #222;
