--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
    min-height: 100vh; 
   background: linear-gradient(to bottom, #282828, #ff6600);
