Fix missing semicolon in CSS

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
    font-family:verdana;
    border-left: 20px solid #222;
    border-right: 20px solid #222;
-   margin: 0
+   margin: 0;
 }
 .hero a {
   color: white;           
