--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
    min-height: 100vh;
    background: linear-gradient(to bottom, #282828, #ff6600);
    margin: 0;
-   color: white;
+   color:;
    font-family:verdana;
    border-left: 20px solid #222;
    border-right: 20px solid #222;
