--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
    min-height: 100vh;
    background: linear-gradient(to bottom, #282828, #ff6600);
    margin: 0;
-   color:;
+   color:white;
    font-family:verdana;
    border-left: 20px solid #222;
    border-right: 20px solid #222;
@@ -105,6 +105,10 @@ section.activities{
   transform: translateY(-5px);
   box-shadow: 0 20px 20px white;
   color:white;
+} 
+@media 1200px{
+   margin-left: 50px;
+   margin-right: 50px;
 }
 footer {
   background: #222;
