--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section.activities{
   box-shadow: 0 20px 20px white;
   color:white;
 } 
-@media 1200px{
+ @media (max-width:1200px) {
    margin-left: 50px;
    margin-right: 50px;
 }
