--- a/style.css
+++ b/style.css
@@ -111,3 +111,8 @@ footer {
   padding: 20px 10px;
   margin-top: 300px;
 }
+.contact {
+   text-align:center;
+  text-shadow: 10px 10px 10px Black;
+}
+   
