--- a/style.css
+++ b/style.css
@@ -103,6 +103,21 @@ section.activities{
 .contact {
    text-align:center;
    text-shadow: 10px 10px 10px Black;
+   margin-bottom: 100px;
+   margin-top: 100px;
+}
+.submit{
+   background-color: #693b1c;
+   border: none;
+   border-radius: 5px
+   color: white;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   cursor: pointer;
+   box-shadow: 10px 10px 10p white,
 }
  @media (max-width:1200px) {
    margin-left: 50px;
