--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section.activities{
    margin-bottom: 100px;
    margin-top: 100px;
 }
-.submit{
+.btn {
    background-color: #693b1c;
    border: none;
    border-radius: 5px
