--- a/style.css
+++ b/style.css
@@ -109,16 +109,22 @@ section.activities{
 .btn {
    background-color: #693b1c;
    border: none;
-   border-radius: 5px
+   border-radius: 5px;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
-   display: inline-block;
+   display: flex;
    font-size: 16px;
    cursor: pointer;
-   box-shadow: 10px 10px 10p #000000,
+   box-shadow: 10px 10px 10p #000000;
 }
+.btn:hover {
+   transform: translateY(-5px);
+   box-shadow: 0px 20px 20px white;
+   color:white;
+}
+   
  @media (max-width:1200px) {
    margin-left: 50px;
    margin-right: 50px;
