--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@ section.activities{
 .contact {
    text-align:center;
    text-shadow: 10px 10px 10px Black;
-   margin-bottom: 100px;
-   margin-top: 100px;
+   margin-bottom: 200px;
+   margin-top: 200px;
 }
 .btn {
    background-color: #693b1c;
@@ -125,7 +125,12 @@ section.activities{
    box-shadow: 0px 20px 20px white;
    color:white;
 }
-   
+.coordonnee {
+   text-align:center;
+   text-shadow: 10px 10px 10px Black;
+   margin-top: 50px;
+   margin-bottom: 50px;
+}
  @media (max-width:1200px) {
    margin-left: 50px;
    margin-right: 50px;
@@ -135,7 +140,7 @@ footer {
   color: #ccc;
   text-align: center;
   padding: 20px 10px;
-  margin-top: 300px;
+  margin-top: 0px;
 }
 
    
