--- a/style.css
+++ b/style.css
@@ -125,11 +125,11 @@ section.activities{
    box-shadow: 0px 20px 20px white;
    color:white;
 }
-.coordonnee {
+.CTA {
    text-align:center;
    text-shadow: 10px 10px 10px Black;
-   margin-top: 50px;
-   margin-bottom: 50px;
+   margin-top: 200px;
+   margin-bottom: Opx;
 }
  @media (max-width:1200px) {
    margin-left: 50px;
