--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ section.activities{
    box-shadow: 0px 20px 20px white;
    color:white;
 }
-.CTA {
+.cta {
    text-align:center;
    text-shadow: 10px 10px 10px Black;
    margin-top: 200px;
