--- a/style.css
+++ b/style.css
@@ -78,11 +78,12 @@ section.activities{
   box-shadow: 0px 0px 30px 
 }
 .cards{
-  display: flex;
-  gap: 50px;
-  flex-wrap: wrap;
-  margin-right: 50px;
-  margin-left: 50px;
+   display: flex;
+   gap: 50px;
+   flex-wrap: wrap;
+   margin-right: 50px;
+   margin-left: 50px;
+   margin-Bottom: 200px;
 }
 .card{
   color:	Black;
