--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ section.activities{
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
+   text-shadow: none;
    display: inline-block;
    font-size: 16px;
    cursor: pointer;
