--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ section.activities{
    margin-top: 200px;
    margin-bottom: Opx;
 }
-.cta2 {
+.contact-link {
    text-align: center;
    text-shadow: 10px 10px 10px Black;
    margin-top: 100px;
