--- a/style.css
+++ b/style.css
@@ -35,11 +35,18 @@ body {
   justify-content: space-between;
   aligne-items: center;
 }
-.nav-links{
-  list-style:none;
+.nav-links {
+  position: fixed;
+  top: 0;
+  left: -250px; 
+  width: 250px;
+  height: 100%;
+  background-color: #203a43;
   display: flex;
-  gap: 1.5rem;
-}  
+  flex-direction: column;
+  padding-top: 60px;
+  transition: right 0.3s ease;
+}
 .nav-links a{
   text-decoration:none;
   color:white;
