--- a/style.css
+++ b/style.css
@@ -30,47 +30,80 @@ body {
   border-radius: 5px;
   box-shadow: 0px 0px 20px;
 }
-.nav{
-  display:flex;
-  justify-content: space-between;
-  aligne-items: center;
+header {
+  background: #693b1c;
 }
-.nav-links {
-  position: fixed;
-  top: 0;
-  left: -250px; 
-  width: 250px;
-  height: 100%;
-  background-color: #203a43;
+
+/* NAVBAR */
+.navbar {
   display: flex;
-  flex-direction: column;
-  padding-top: 60px;
-  transition: right 0.3s ease;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  position: relative;
 }
-.nav-links.active {
-  right: 0;
+
+.logo {
+  color: white;
+  font-weight: bold;
+  font-size: 1.2rem;
 }
-.nav-links li {
+
+/* MENU */
+.nav-links {
   list-style: none;
-  margin: 20px 0;
+  display: flex;
+  gap: 1.5rem;
 }
-.nav-links li a {
+
+.nav-links a {
   color: white;
   text-decoration: none;
-  font-size: 18px;
+  font-weight: 500;
 }
-.hamburger {
-  display: flex;
+
+/* BURGER BUTTON */
+.menu-toggle {
+  display: none;
   flex-direction: column;
-  cursor: pointer;
-  width: 30px;
   justify-content: space-between;
-  height: 21px;
+  width: 25px;
+  height: 18px;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
-.hamburger div {
+
+.menu-toggle span {
+  display: block;
   height: 3px;
-  background-color: white;
+  width: 100%;
+  background: white;
+  border-radius: 2px;
 }
+
+/* RESPONSIVE */
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: flex;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background: #693b1c;
+    width: 200px;
+    padding: 1rem;
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+}
+
 .about {
   text-align: center;
   Margin-top: 70px;
