--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
    min-height: 100vh;
    background: linear-gradient(to bottom, #282828, #ff6600);
